logs/dag_id=Projet1/run_id=manual__2023-11-19T22:42:06.083213+00:00/task_id=join_table/attempt=1.log
[2023-11-19T22:44:48.446+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.join_table manual__2023-11-19T22:42:06.083213+00:00 [queued]>
[2023-11-19T22:44:48.479+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.join_table manual__2023-11-19T22:42:06.083213+00:00 [queued]>
[2023-11-19T22:44:48.480+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-19T22:44:48.522+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): join_table> on 2023-11-19 22:42:06.083213+00:00
[2023-11-19T22:44:48.555+0000] {standard_task_runner.py:57} INFO - Started process 3087 to run task
[2023-11-19T22:44:48.570+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'join_table', 'manual__2023-11-19T22:42:06.083213+00:00', '--job-id', '327', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpgu9q8p5x']
[2023-11-19T22:44:48.573+0000] {standard_task_runner.py:85} INFO - Job 327: Subtask join_table
[2023-11-19T22:44:48.748+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.join_table manual__2023-11-19T22:42:06.083213+00:00 [running]> on host b36ebcee5948
[2023-11-19T22:44:48.971+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='join_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-19T22:42:06.083213+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-19T22:42:06.083213+00:00'
[2023-11-19T22:44:48.988+0000] {sql.py:274} INFO - Executing: -- Utilisez la conversion explicite des types de données dans la clause INNER JOIN je dois renommer la colonne tranches d'age a cause de ' sino  on aura des erreurs 
SELECT *
FROM "Urgences"
INNER JOIN "Departements" ON "Urgences".dep = "Departements".num_dep;


SELECT *
FROM Urgences
INNER JOIN Age ON Urgences.sursaud_cl_age_corona = Age.Code tranches d'age;
[2023-11-19T22:44:49.008+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-19T22:44:49.028+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-19T22:44:49.121+0000] {sql.py:418} INFO - Running statement: -- Utilisez la conversion explicite des types de données dans la clause INNER JOIN je dois renommer la colonne tranches d'age a cause de ' sino  on aura des erreurs 
SELECT *
FROM "Urgences"
INNER JOIN "Departements" ON "Urgences".dep = "Departements".num_dep;


SELECT *
FROM Urgences
INNER JOIN Age ON Urgences.sursaud_cl_age_corona = Age.Code tranches d'age;, parameters: None
[2023-11-19T22:44:49.134+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "tranches"
LINE 9: ... Age ON Urgences.sursaud_cl_age_corona = Age.Code tranches d...
                                                             ^

[2023-11-19T22:44:49.192+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet1, task_id=join_table, execution_date=20231119T224206, start_date=20231119T224448, end_date=20231119T224449
[2023-11-19T22:44:49.230+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 327 for task join_table (syntax error at or near "tranches"
LINE 9: ... Age ON Urgences.sursaud_cl_age_corona = Age.Code tranches d...
                                                             ^
; 3087)
[2023-11-19T22:44:49.271+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-19T22:44:49.299+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
